--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <!--  <div class="carousel-item active">
+            <div class="carousel-item ">
                 <img src="https://images.hdqwalls.com/wallpapers/the-batman-2022-red-0w.jpg" class="d-block w-100" alt="...">
                 <div class="info__peli">
                     <h5>The Batman</h5>
                     <p>Una nueva versión del muerciélago de ciudad Gótica</p>
                 </div>
-            </div> -->
+            </div>
             <div class="carousel-item active">
                 <img src="https://yourfiles.cloud/uploads/06bfc4ad3fac6fe5f2dd0c263e60d507/Doctor-Strange-2-3.jpg" class="d-block w-100" alt="...">
-                <div class=" info__peli ">
+                <div class="info__peli ">
                     <h5 class="info__titulo">Doctor Strange</h5>
 
                     <p class="info__descripcion">Como reaccionaría la humanidad ante su inminente fin?</p>
@@ -39,13 +39,13 @@
 
                 </div>
             </div>
-            <!--  <div class="carousel-item">
+            <div class="carousel-item">
                 <img src="https://www.xtrafondos.com/descargar.php?id=6777&resolucion=3840x2160" class="d-block w-100" alt="...">
                 <div class="info__peli">
                     <h5>En busca de la felicidad</h5>
                     <p>Ganadora de 72 premos Oscar y 27 Golden Globe</p>
                 </div>
-            </div> -->
+            </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
         <span class="carousel-control-prev-icon prueba " aria-hidden="true"></span>
