--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -23,18 +23,20 @@
             <div class="carousel-item ">
                 <img src="https://images.hdqwalls.com/wallpapers/the-batman-2022-red-0w.jpg" class="d-block w-100" alt="...">
                 <div class="info__peli">
-                    <h5>The Batman</h5>
-                    <p>Una nueva versión del muerciélago de ciudad Gótica</p>
+                    <h5 class="info__titulo">The Batman</h5>
+                    <p class="info__descripcion"><span>Descripcion:</span> Una nueva versión del muerciélago de ciudad Gótica</p>
+                    <p class="info__actores"><span>Reparto:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, tempore iusto recusandae. Voluptas </p>
+                    <p class="info__genero"><span>Genero:</span> Aventura/Fantasía</p>
+                    <button type="button" class="btn btn-danger btn-sm info__btn--ver"><i class="fa-solid fa-circle-play"></i> Ver Hora</button>
                 </div>
             </div>
             <div class="carousel-item active">
                 <img src="https://yourfiles.cloud/uploads/06bfc4ad3fac6fe5f2dd0c263e60d507/Doctor-Strange-2-3.jpg" class="d-block w-100" alt="...">
                 <div class="info__peli ">
                     <h5 class="info__titulo">Doctor Strange</h5>
-
-                    <p class="info__descripcion">Como reaccionaría la humanidad ante su inminente fin?</p>
-                    <p class="info__actores">Benedict Cumberbatch, Elizabeth Olsen, Chiwetel Ejiofor, Benedict Wong</p>
-                    <p class="info__genero">Aventura/Fantasía</p>
+                    <p class="info__descripcion"><span>Descripcion:</span> Como reaccionaría la humanidad ante su inminente fin?</p>
+                    <p class="info__actores"><span>Reparto:</span> Benedict Cumberbatch, Elizabeth Olsen, Chiwetel Ejiofor, Benedict Wong</p>
+                    <p class="info__genero"><span>Genero:</span> Aventura/Fantasía</p>
                     <button type="button" class="btn btn-danger btn-sm info__btn--ver"><i class="fa-solid fa-circle-play"></i> Ver Hora</button>
 
                 </div>
@@ -42,8 +44,11 @@
             <div class="carousel-item">
                 <img src="https://www.xtrafondos.com/descargar.php?id=6777&resolucion=3840x2160" class="d-block w-100" alt="...">
                 <div class="info__peli">
-                    <h5>En busca de la felicidad</h5>
-                    <p>Ganadora de 72 premos Oscar y 27 Golden Globe</p>
+                    <h5 class="info__titulo">En busca de la felicidad</h5>
+                    <p class="info__descripcion"><span>Descripcion:</span> Ganadora de 72 premos Oscar y 27 Golden Globe</p>
+                    <p class="info__actores"><span>Reparto:</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi, tempore iusto recusandae. Voluptas </p>
+                    <p class="info__genero"><span>Genero:</span> Aventura/Fantasía</p>
+                    <button type="button" class="btn btn-danger btn-sm info__btn--ver"><i class="fa-solid fa-circle-play"></i> Ver Hora</button>
                 </div>
             </div>
         </div>
